# Rust-actix-web-api

./: .env  Cargo.toml  credential.txt  note.txt
src/: main.rs
src/api/: mod.rs  stock_api.rs
src/invoice/: mongodb_repo.rs  services.rs  stock_model.rs
src/itemlist/: models.rs
src/models/: mod.rs  stock_model.rs
src/repository/: mod.rs  mongo_repo.rs
